--- a/scattergraph.html
+++ b/scattergraph.html
@@ -22,7 +22,7 @@ Learn how to:
       // JS
       var chart;
 
-      JSC.fetch('./resources/EcoFootprintAndHDI.csv')
+      JSC.fetch('https://raw.githubusercontent.com/meiotta/jscharting/main/original.csv)
         .then(function(response) {
           return response.text();
         })
